--- a/PersistenceProject/PersistenceProject.csproj
+++ b/PersistenceProject/PersistenceProject.csproj
@@ -50,5 +50,8 @@
       <Name>ModelProject</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
